# MacroQuant-BR

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: app.py
dashboard/pages/: p1_macro_monitor.py  p2_correlacoes.py  p3_var_analysis.py  p4_portfolio.py  p5_regimes.py
data/processed/: btc_regimes.parquet  dataset_final.parquet
src/data/: clean.py  collect_bcb.py  collect_focus.py  collect_market.py  schemas.py
src/models/: cointegration.py  ml_models.py  portfolio.py  unit_root.py  var_model.py
src/viz/: theme.py
