[project]
name = "macroquant-br"
version = "0.1.0"
description = "Modelagem VAR e ML para impacto macroeconômico em ativos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "python-bcb>=0.2.0",
    "pandera>=0.18.0",
    "pyarrow>=15.0.0", # Essencial para salvar em Parquet
    "requests>=2.31.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuração do Ruff (Linter/Formatter)
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # Erros, Pyflakes, Isort (ordenação de imports)